shim/third-party/rust/vendor/ghost-0.1.6/tests/ui/contravariant.stderr
error: lifetime may not live long enough
 --> tests/ui/contravariant.rs:7:5
  |
6 | fn require_covariant<'a>(phantom: ContravariantPhantom<&'static str>) -> ContravariantPhantom<&'a str> {
  |                      -- lifetime `'a` defined here
7 |     phantom
  |     ^^^^^^^ returning this value requires that `'a` must outlive `'static`
